feat: added login, logout and register functionality using WTFiorms, added csrf to prevent against CSRF attacks

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,7 @@
       <li class="navlink"><a href="{{ url_for('main.home', name=name) }}">Home</a></li>
       <li class="navlink"><a href="{{ url_for('main.tasks', name=name) }}">View Tasks</a></li>
       <li class="navlink"><a href="{{ url_for('main.create_task', name=name) }}">New Task</a></li>
+      <li class="navlink"><a href="{{ url_for('main.logout') }}">Logout</a></li>
     </ul>
   </nav>
 
