--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li class="navlink"><a href="{{ url_for('main.tasks', name=name) }}">View Tasks</a></li>
       <li class="navlink"><a href="{{ url_for('main.create_task', name=name) }}">New Task</a></li>
+            <li class="navlink"><a href="{{ url_for('main.logout') }}">Logout</a></li>
     </ul>
   </nav>
 </body>
