--- a/app/templates/new_task.html
+++ b/app/templates/new_task.html
@@ -3,11 +3,11 @@
 {% block main %}
 <h1>Create a new task</h1>
 
-<form action="{{ url_for('main.create_task', name=name) }}" method="post">
-    <input type="text" name="title" placeholder="Task title">
-    <button type="submit">Add</button>
+<form method="POST">
+    {{ form.hidden_tag() }}
+    {{ form.title.label }}: {{ form.title() }}
+    {{ form.submit() }}
 </form>
 
 <a href="{{ url_for('main.tasks', name=name) }}">Back to tasks</a>
 {% endblock %}
-
