--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>Login</h2>
+<h2>Create Account</h2>
 
 <form method="POST">
     {{ form.hidden_tag() }}
@@ -13,8 +13,8 @@
     <p>{{ form.submit() }}</p>
 </form>
 
-<p>Don't have an account?
-   <a href="{{ url_for('main.register') }}">Register</a>
+<p>Already have an account?
+   <a href="{{ url_for('main.login') }}">Login</a>
 </p>
 
 </body>
